--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
-  "name": "inline-script-webpack-plugin",
+  "name": "after-emit-hook-webpack-plugin",
   "version": "1.0.3",
-  "description": "a plugin of webpack to inline javascript into html with html-webpack-plugin",
+  "description": "do something while after-emit",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ifmos/inline-script-webpack-plugin.git"
+    "url": "git+https://github.com/ifmos/after-emit-hook-webpack-plugin.git"
   },
   "keywords": [
     "webpack",
     "plugin",
-    "inline",
-    "script"
+    "after-emit",
+    "hook"
   ],
   "author": "mos",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ifmos/inline-script-webpack-plugin/issues"
+    "url": "https://github.com/ifmos/after-emit-hook-webpack-plugin/issues"
   },
-  "homepage": "https://github.com/ifmos/inline-script-webpack-plugin#readme",
-  "dependencies": {
-    "source-map-url": "^0.4.0"
-  }
+  "homepage": "https://github.com/ifmos/after-emit-hook-webpack-plugin#readme",
+  "dependencies": {}
 }
